[tool.poetry]
name = "pytune-chat"
version = "0.1.0"
description = "Conversation context store and agent orchestration for PyTune"
authors = ["Gabriel de Fombelle <gabriel.de.fombelle@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pytune_chat" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
tortoise-orm = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.8"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
